<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/setting_background_color"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/inner_toolbar"
            style="@style/Widget.MaterialComponents.ActionBar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bg_bottom_sheet"
            app:navigationIcon="@drawable/ic_arrow_back_screen"
            app:navigationIconTint="@android:color/black"
            app:title="@string/settings" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_bottom_sheet"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:text="@string/provide_by"
            android:textStyle="bold" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="35dp"
            android:text="@string/provide_description"
            android:textSize="12sp" />


        <ImageView
            android:id="@+id/openWeatherImage"
            android:layout_width="160dp"
            android:layout_height="75dp"
            android:layout_gravity="end"
            android:contentDescription="@string/source_provider"
            android:src="@drawable/openweather" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_setting_menu"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/about">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/temperature"
            android:textColor="@color/text_color" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeC"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:tag="C"
                android:text="@string/C" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeF"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:tag="C"
                android:text="@string/F" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_setting_menu"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/one">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/wind_speed"
            android:textColor="@color/text_color" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speed_M"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:tag="M"
                android:text="@string/m_s"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speed_H"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:tag="H"
                android:text="@string/km_h"
                android:textAllCaps="false" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_setting_menu"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/two">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/pressure"
            android:textColor="@color/text_color" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pressure_mm"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:tag="mm"
                android:text="@string/mmHg"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pressure_h"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:tag="hpa"
                android:text="@string/hPa"
                android:textAllCaps="false" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/three"
        android:background="@color/bg_bottom_sheet">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:text="@string/theme"
            android:textStyle="bold" />
    </FrameLayout>



    <FrameLayout
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_settings_theme_top"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/theme">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/chooseSystems"
            android:textColor="@color/text_color" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

<!--        <com.google.android.material.button.MaterialButtonToggleGroup-->
<!--            android:id="@+id/systemsChoose"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:layout_marginBottom="4dp"-->
<!--            app:selectionRequired="true"-->
<!--            app:singleSelection="true">-->

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/yes"-->
<!--                style="?attr/materialButtonOutlinedStyle"-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:tag="yes"-->
<!--                android:text="@string/yes"-->
<!--                android:textAllCaps="false"/>-->

<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/no"-->
<!--                style="?attr/materialButtonOutlinedStyle"-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:tag="no"-->
<!--                android:text="@string/no"-->
<!--                android:textAllCaps="false"/>-->

<!--        </com.google.android.material.button.MaterialButtonToggleGroup>-->

    </FrameLayout>


    <FrameLayout
        android:id="@+id/five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_settings_theme_down"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/fourth">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/chooseYourself"
            android:textColor="@color/text_color" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/groupDayNight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/day"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:tag="day"
                android:text="@string/daySetting"
                android:textAllCaps="false"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/night"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:tag="night"
                android:text="@string/nightSetting"
                android:textAllCaps="false"/>


        </com.google.android.material.button.MaterialButtonToggleGroup>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>