<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_main_activity">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/guideline"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toTopOf="parent">

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_menu_btn"
            style="@style/IconButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/ic_menu_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_settings_btn"
            style="@style/IconButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/ic_settings_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_city_name_tv"
            style="@style/MainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Moscow" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_data_tv"
            style="@style/MainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_city_name_tv"
            tools:text="1 апреля" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72" />

        <ImageView
            android:id="@+id/main_weather_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintWidth_percent="0.4"
            tools:src="@mipmap/clouod3"
            app:tint="@color/text_color" />


        <ImageView
            android:id="@+id/main_weather_condition_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toTopOf="@+id/main_temp"
            app:layout_constraintLeft_toLeftOf="@+id/main_temp"
            tools:src="@drawable/ic_sun" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_weather_condition_description"
            style="@style/MainTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/main_weather_condition_icon"
            app:layout_constraintEnd_toStartOf="@+id/main_weather_image"
            app:layout_constraintStart_toEndOf="@+id/main_weather_condition_icon"
            app:layout_constraintTop_toTopOf="@+id/main_weather_condition_icon"
            tools:text="Clear sky" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_temp"
            style="@style/MainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textSize="100sp"
            app:autoSizeMinTextSize="88sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/main_weather_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_weather_image"
            tools:text="6\u00B0" />

        <LinearLayout
            android:id="@+id/main_second_temp_tvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/main_temp"
            app:layout_constraintStart_toStartOf="@+id/main_temp"
            app:layout_constraintTop_toBottomOf="@id/main_temp"
            tools:layout_editor_absoluteY="291dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/min"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_temp_min_tv"
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="19\u00B0" />

            </LinearLayout>


            <LinearLayout
                style="@style/DividerStyle"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/avr"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_temp_avr_tv"
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="23\u00B0" />

            </LinearLayout>

            <LinearLayout
                style="@style/DividerStyle"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/max"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_temp_max_tv"
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="28\u00B0" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/brief_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintVertical_bias="0.25">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionalWeatherInformationItemStyle"
                    android:src="@drawable/ic_thermostat_24" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_pressure_mu_tv"
                    style="@style/additionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="1,5 hPa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionalWeatherInformationItemStyle"
                    android:src="@drawable/ic_drop" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_humidity_mu_tv"
                    style="@style/additionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="87%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionalWeatherInformationItemStyle"
                    android:src="@drawable/ic_flag_24" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_wind_speed_mu_tv"
                    style="@style/additionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="5 м/с" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/brief_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/brief_information"
            app:layout_constraintTop_toTopOf="@+id/brief_information">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionalWeatherInformationItemStyle"
                    android:src="@drawable/ic_sunvise" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_sunrise_mu_tv"
                    style="@style/additionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="4:30" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/additionalWeatherInformationItemStyle"
                    android:src="@drawable/ic_sunset" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_sunset_mu_tv"
                    style="@style/additionalWeatherInformationStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="22:30" />

            </LinearLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_bottom_sheets"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/bg_main_bottom_sheets"
        android:elevation="8dp"
        app:behavior_hideable="false"
        app:behavior_peekHeight="140dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/bottom_sheets_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/bg_main_bottom_sheets_swiper"
                android:orientation="horizontal"
                app:layout_anchor="@id/bottom_sheets_container"
                app:layout_anchorGravity="top|center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_hourly_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:overScrollMode="never"
                tools:layout_height="80dp" />

            <LinearLayout
                style="@style/DividerStyle"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp" />

            <FrameLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </FrameLayout>

        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>